--- a/customer_changes.Rmd
+++ b/customer_changes.Rmd
@@ -150,7 +150,6 @@ ggplot(new_groupby_filtered, aes(x = as.Date(paste0(first_purchase_month, "-01")
 
 
 ```{r}
- # Initial summary table
 
 customer_order_summary <- so_query_result |> 
   group_by(customer_id) |> 
@@ -162,13 +161,11 @@ customer_order_summary <- so_query_result |>
     total_revenue = sum(total, na.rm = TRUE)  
   )
 
-
 merged_data <- merge(customer_order_summary, job_hours_result, by = "customer_id", all.x = TRUE)
 merged_data <- merged_data |> 
   mutate(
     revenue_per_hour = total_revenue / completed_hours
   )
-
 
 merged_data
 
@@ -177,14 +174,12 @@ merged_data
 
 
 ```{r}
-#so_query_result
-```
 
+```
 
 ```{r}
 
 ```
-
 
 ```{r}
 
@@ -193,41 +188,24 @@ merged_data
 Retention - Customer Count
 ```{r}
 
-# cohort table
+
 customer_cohort <- so_query_result |> 
   group_by(customer_id) |> 
   summarise(first_order_month = floor_date(min(order_date), "month")) |> 
   ungroup()
 
-# 30 day version
-# sales_orders <- so_query_result |> 
-#   left_join(customer_cohort, by = "customer_id") |> 
-#   mutate(
-#     months_since_first_order = as.numeric(difftime(order_date, first_order_month, units = "days")) %/% 30
-#   )
-
-
-# month version
 sales_orders <- so_query_result |> 
   left_join(customer_cohort, by = "customer_id") |> 
   mutate(
     months_since_first_order = floor(interval(first_order_month, order_date) / months(1))
   )
 
-
-#main table
 cohort_table <- sales_orders |>
   group_by(first_order_month, months_since_first_order) |>
   summarise(customers_in_cohort = n_distinct(customer_id)) |>
   spread(key = months_since_first_order, value = customers_in_cohort, fill = 0) |>
   arrange(first_order_month)
 
-
-
-# View the cohort table
-#sales_orders
-#sales_orders |> 
-  #filter(customer_id == 'V006-VONGA')
 
 cohort_table
 #write.csv(cohort_table, "cohort_table_new.csv", row.names = FALSE)
@@ -260,31 +238,22 @@ cohort_table
 
 ```
 
-
 ```{r}
 
 
 ```
 
-
 ```{r}
-so_query_result
 
 ```
 
-
 ```{r}
-
-# Sample data
-library(dplyr)
-
 
 # Filter
 filtered_data <- sales_orders %>%
   filter(first_order_month == as.Date("2023-01-01"))
 
-# result df
-result <- data.frame(first_order_month = as.Date("2023-01-01"))
+test <- data.frame(first_order_month = as.Date("2023-01-01"))
 
 # Loop through each month (0-22)
 for (i in 0:22) {
@@ -293,62 +262,58 @@ for (i in 0:22) {
     summarise(customer_count = n_distinct(customer_id)) |> 
     pull(customer_count)
   
-  result[[paste0("Month_", i)]] <- count_customers
+  test[[paste0("Month_", i)]] <- count_customers
+}
+
+# Show the result
+test
+
+```
+
+
+```{r}
+
+```
+
+```{r}
+
+```
+
+```{r}
+
+  
+```
+
+```{r}
+# Identify all unique cohort start months
+all_cohorts <- sales_orders |> 
+  distinct(first_order_month) |> 
+  arrange(first_order_month) |> 
+  pull(first_order_month)
+
+# Initialize empty result dataframe
+result <- data.frame(first_order_month = all_cohorts)
+
+# Loop through each cohort
+for (cohort_date in all_cohorts) {
+  # Filter data for this cohort
+  cohort_data <- sales_orders |> 
+    filter(first_order_month == cohort_date)
+  
+  # Loop through each month (0-22)
+  for (i in 0:22) {
+    count_customers <- cohort_data |> 
+      filter(months_since_first_order >= i) |> 
+      summarise(customer_count = n_distinct(customer_id)) |> 
+      pull(customer_count)
+    
+    # Add to result dataframe - just use the number as column name
+    result[result$first_order_month == cohort_date, as.character(i)] <- count_customers
+  }
 }
 
 # Show the result
 result
-
-
-
-
-```
-
-
-```{r}
-library(dplyr)
-
-# Ensure first_order_month is a Date column
-sales_orders <- sales_orders %>%
-  mutate(first_order_month = as.Date(first_order_month))
-
-# Create an empty result data frame to store the counts
-result <- data.frame()
-
-# Loop through all unique first_order_months
-for (first_month in unique(sales_orders$first_order_month)) {
-  # Filter data for the specific first_order_month
-  filtered_data <- sales_orders %>%
-    filter(first_order_month == first_month)
-  
-  # Initialize a vector to store counts for the months 0-22
-  customer_counts <- c(first_order_month)
-  
-  # Loop to count unique customers for each month (0-22)
-  for (i in 0:22) {
-    count_customers <- filtered_data %>%
-      filter(months_since_first_order >= i) %>%
-      summarise(customer_count = n_distinct(customer_id)) %>%
-      pull(customer_count)
-    
-    customer_counts <- c(customer_counts, count_customers)
-  }
-  
-  # Bind the result for the current first_order_month to the overall result
-  result <- rbind(result, customer_counts)
-}
-
-# Set the column names
-colnames(result) <- c("first_order_month", paste0("Month_", 0:22))
-
-# Show the result
-print(result)
-
- 
-
-
-
-
 ```
 
 
@@ -356,42 +321,21 @@ print(result)
 
 ```
 
+```{r}
 
+```
 
 ```{r}
 
 ```
 
-
 ```{r}
 
 ```
 
-
 ```{r}
 
 ```
-
-
-```{r}
-
-```
-
-
-```{r}
-
-```
-
-
-```{r}
-
-```
-
-
-```{r}
-
-```
-
 
 ```{r}
 
